[project]
name = "tweak-tools"
version = "0.1.0"
description = "IPA assembly + deploy helpers for the tweak."
requires-python = ">=3.12"
dependencies = [
    # Mach-O editor. Adds LC_LOAD_DYLIB to the target app binary so it
    # dyld-loads the injected tweak dylib on launch.
    "lief>=0.17.6",
    # Frida controller side — attaches to the target, injects the JS
    # agent compiled from frida/agent.ts by `make agent`.
    # frida-tools also gives us frida-ps / frida-trace / frida-kill.
    "frida>=17",
    "frida-tools>=13",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]
# Match .commitlintrc.yaml's header-max-length so a one-line commit and
# a one-line comment can share the same terminal width without wrapping.
line-length = 128
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
